# bank-generator-cz

./: README.md  generate_bank_list.py  pyproject.toml
.github/workflows/: python-publish.yml  update_banks.yml
bank_generator_cz/: __init__.py  account.py  bank_codes.py
