[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-generator-cz"
version = "0.1.0"
authors = [
    { name="Jan Němec", email="nemec.jan123@gmail.com" },
]
description = "Czech bank account number generator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "requests>=2.33.0",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"
